--- a/templates/Home.html
+++ b/templates/Home.html
@@ -54,9 +54,15 @@
             <li>
               <a href="./email">
                 <i class="fas fa-paper-plane"></i>
-                  Email
+                Email
               </a>
-          </li>
+              </li>
+                    <li>
+                      <a href="./register">
+                        <i class="fas fa-users"></i>
+                        Register User
+                      </a>
+                    </li>
             </ul>
         </nav>
 
