--- a/templates/TrafficAnalysis.html
+++ b/templates/TrafficAnalysis.html
@@ -60,11 +60,17 @@
           </a>
         </li>
         <li>
-          <a href="./email">
-            <i class="fas fa-paper-plane"></i>
-            Email
-          </a>
-        </li>
+					<a href="./email">
+					  <i class="fas fa-paper-plane"></i>
+					  Email
+					</a>
+				  </li>
+                <li>
+                  <a href="./register">
+                    <i class="fas fa-users"></i>
+                    Register User
+                  </a>
+                </li>
       </ul>
     </nav>
 
