--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 				<a href="{{ url_for('login') }}" class="active">Login</a>
 				<a href="{{ url_for('register') }}">Register</a>
 			</div>
-			<form action="{{ url_for('login') }}" method="post">
+			<form action="{{ url_for('login') }}" method="POST">
 				<label for="username">
 					<i class="fas fa-user"></i>
 				</label>
