--- a/templates/register.html
+++ b/templates/register.html
@@ -87,7 +87,7 @@
                             
                                         <a class="nav-link dropdown-toggle" href="#"  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 <i class="fas fa-user" ></i>
-                                            User 2020</a>
+                                            {{username}}</a>
                                         <div class="dropdown-menu dropdown-menu-right">
                                                 <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal" href="#">Log Out</a>
                                                 </div>
