placed restrictions on registration page  for only the administrator

--- a/templates/register.html
+++ b/templates/register.html
@@ -57,12 +57,16 @@
 					  Email
 					</a>
 				  </li>
-                <li>
-                  <a href="./register">
-                    <i class="fas fa-users"></i>
-                    Register User
-                  </a>
-                </li>
+				  {% block content %}
+				  {% if role %}
+				  <li>
+					<a href="./register">
+					  <i class="fas fa-users"></i>
+					  Register User
+					</a>
+				  </li>
+				  {% endif %}
+				  {% endblock content %}
             </ul>
         </nav>
 
