--- a/templates/TrafficAnalysis.html
+++ b/templates/TrafficAnalysis.html
@@ -65,12 +65,16 @@
 					  Email
 					</a>
 				  </li>
-                <li>
-                  <a href="./register">
-                    <i class="fas fa-users"></i>
-                    Register User
-                  </a>
-                </li>
+          {% block content %}
+          {% if role %}
+          <li>
+            <a href="./register">
+              <i class="fas fa-users"></i>
+              Register User
+            </a>
+          </li>
+          {% endif %}
+          {% endblock content %}
       </ul>
     </nav>
 
