adjusted home information

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -119,7 +119,8 @@
       <!-- Page Content  -->
 
       <div id="content1">
-        <h5 class="mb-5"><span class="brown">Analyze</span> Image or Footage</h2>
+        <h4 class="mb-5"><span class="brown">Abstract</span> </h4>
+        <h4 class="mb-5">The Road usage analysis and advisory System  is intended to be used by the bodies responsible  for planning, maintaining and constructing roads in Uganda. The system  will analyse  given input data and output a plan to the stakeholders,namely Uganda National Roads  Authority (UNRA) and Kampala Capital City Authority (KCCA) and Local Governments. This  system is intended to assist the national bodies to improve road user experience in Uganda </h4>
 
       </div>
     </div>
