working traffic model

--- a/templates/PotHoleDetection.html
+++ b/templates/PotHoleDetection.html
@@ -136,12 +136,13 @@
           <div class="col-lg-6">
             <div class="form-group">
             <label>Traffic</label>
-            <select name="Traffic" class="form-control" id="staticEmail2">
+            <input type="file" name="Traffic_file"   accept=".png, .jpg, .jpeg, .mp4" />
+            <!-- <select name="Traffic" class="form-control" id="staticEmail2">
               <option class="customOption" value=""></option>
               <option class="customOption" value="High">High</option>
               <option class="customOption" value="Medium">Medium</option>
               <option class="customOption" value="Low">Low</option>
-            </select>
+            </select> -->
             </div>
         </div>
 
